--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -30,6 +30,9 @@
     "globals": "^16.2.0",
     "vite": "^7.0.0"
   },
+  "engines": {
+  "node": "18.x"
+  },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "eslint.config.js",
   "author": "",
